--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(le3d CXX)
+project(le3d CXX C)
 cmake_minimum_required(VERSION 3.4)
 set(CMAKE_CXX_STANDARD 11)
 
@@ -39,7 +39,7 @@ if (WIN32)
         engine/window_win.cpp
         tools/timing_win.cpp
     )
-else()
+elseif (UNIX)
     find_package(X11 REQUIRED)
     list(APPEND LINK_LIBRARIES
         ${X11_LIBRARIES}
@@ -52,6 +52,12 @@ else()
         engine/gamepad_unix.cpp
         engine/window_unix.cpp
         tools/timing_unix.cpp
+    )
+elseif (AMIGA)
+    list(APPEND ENGINE_FILES
+        engine/draw_amiga.cpp
+        engine/window_amiga.cpp
+        tools/timing_amiga.cpp
     )
 endif()
 
@@ -71,10 +77,10 @@ target_link_libraries(
     ${LINK_LIBRARIES}
 )
 
-target_compile_options(le3d PRIVATE -march=pentium4 -Wall -m32 -ffast-math -mfpmath=sse -fno-exceptions -fno-rtti -fno-stack-protector -fno-math-errno -fno-ident -ffunction-sections)
+target_compile_options(le3d PRIVATE -Wall -ffast-math -fno-exceptions -fno-rtti -fno-stack-protector -fno-math-errno -fno-ident -ffunction-sections)
 
 if (WIN32)
-    target_compile_options(le3d PRIVATE -D__MSVCRT_VERSION__=0x0700)
+    #target_compile_options(le3d PRIVATE -D__MSVCRT_VERSION__=0x0700)
 endif()
 
 if (LE3D_BUILD_EXAMPLES)
