rename it back to cube...it is the real cube

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -8,7 +8,7 @@ elseif(UNIX)
     )
 elseif(AMIGA)
     add_executable(cube
-        cube/test_amiga.cpp
+        cube/cube_amiga.cpp
     )
 endif()
 
