--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,11 +1,15 @@
 image: Visual Studio 2017
 
+environment:
+  matrix:
+    - GENERATOR="Visual Studio 15 2017" # x86 build
+    - GENERATOR="Visual Studio 15 2017 Win64" # x64 build
+
 platform:
-  - x86
   - x64
 
 build_script:
   - mkdir build
   - cd build
-  - cmake ..
+  - ps: cmake -G "$env:GENERATOR" ..
   - cmake --build .
