--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,8 +2,8 @@ image: Visual Studio 2017
 
 environment:
   matrix:
-    - GENERATOR="Visual Studio 15 2017" # x86 build
-    - GENERATOR="Visual Studio 15 2017 Win64" # x64 build
+    - GENERATOR: "Visual Studio 15 2017" # x86 build
+    - GENERATOR: "Visual Studio 15 2017 Win64" # x64 build
 
 platform:
   - x64
