--- a/engine/config.h.in
+++ b/engine/config.h.in
@@ -75,7 +75,8 @@
 #else
 	#define LE_USE_SSE2					0									/** Use Intel SSE2 instructions */
 	#define LE_USE_AMMX					${LE3D_USE_AMMX}					/** Use Apollo AMMX instructions */
-	#define LE_USE_SAGA_FB				${LE3D_USE_SAGA_FB}
+	#define LE_USE_SAGA_FB				${LE3D_USE_SAGA_FB}					/** Use Vampire SAGA core framebuffer directly */
+	#define LE_USE_VBLANK_FRAME_WAIT	${LE3D_USE_VBLANK_FRAME_WAIT}		/** Use Amiga VBlank interrupt for timing */
 #endif // AMIGA
 
 #endif // LE_CONFIG_H
